2010-02-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkpixbuf.c: fix wrong number of arguments.

2010-02-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkclipboard.c (clipboard_text_received_func): set UTF-8
	encoding to text passed from clipbord.
	Suggested by Rg Rg. Thanks!!!

2010-02-02  Hiroyuki Ito  <ZXB01226@nifty.com>

	* src/rbgtkstock.c (Init_gtk_stock): add items available with GTK+
	2.14 and 2.16.

2010-01-16  Hiroyuki Ito  <ZXB01226@nifty.com>

	* src/rbgdkwindow.c (gdkwin_invalidate): accept nil as 'area'
	argument.

2009-12-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmenuitem.c: accept nil as label.
	Reported by Kazuhiro NISHIYAMA. Thanks!!!

	* test/test_gtk_menu_item.rb: add.

2009-10-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkwindow.c: enable GdkWindow's cursor property again
	because GTK+ 2.18.1 fixed it. We marks GTK+ 2.18.0 as unsupported
	GTK+ version.
	Reported by Guillaume Cottenceau. Thanks!!!

2009-09-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkwindow.c: ignore GdkWindow's cursor property because it
	is registered as gpointer. We can't handle Gdk::Cursor without
	type information. We should define Gdk::Window#cursor instead of
	auto-property reader for it. [#2865895]
	Reported by Guillaume Cottenceau. Thanks!!!
	Reported by Mamoru Tasaka. Thanks!!!

2009-09-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkwidget.c: fix a typo:
	Gtk::Widget#set_scroll_adjustments ->
	Gtk::Widget#set_scroll_adjustment. [#2679744]
	Reported by Kentaro Fukuchi. Thanks!!!

2009-07-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: add missing headers.
	Patch by Mamoru Tasaka. Thanks!!!

2009-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: use RUBYARCHDIR.
	Patch by OBATA Akio. Thanks!!!

	* src/lib/gtk2/base.rb: remove cairo loading because Ruby/Pango
	has tried it.

2009-05-27  Detlef Reichl  <detlef.reichl@gmx.org>
	* src/rbgtkmain.c (gtk_m_init): use $0 instead of rb_argv0.

2009-05-27  Pascal Terjan  <pterjan@linuxfr.org>