@@ -1,3 +1,9 @@
+2010-04-09  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbgtktreepath.c, test/test_gtk_tree_path.rb: fix wrong Ruby
+	<-> C conversion of Gtk::TreePath#<=>.
+	Reported by Takeuchi Yusuke. Thanks!!!
+
 2010-02-28  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbgdkpixbuf.c: fix wrong number of arguments.
